--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,89 @@
+############################
+# Environment / Secrets
+############################
+.env
+.env.*
+*.env
+*.env.local
+*.env.development
+*.env.production
+
+############################
+# Supabase / Keys
+############################
+supabase/.env
+supabase/.env.*
+supabase/config.toml.local
+
+############################
+# Node / Vite
+############################
 node_modules/
 dist/
 build/
-.env
-.env.local
+.vite/
+coverage/
+
+############################
+# Python
+############################
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.db
+
+############################
+# Virtual Environments
+############################
+venv/
+.envrc
+.virtualenv/
+.venv/
+ENV/
+
+############################
+# Logs
+############################
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+############################
+# OS Files
+############################
 .DS_Store
+Thumbs.db
+
+############################
+# IDE / Editor
+############################
+.vscode/
+.idea/
+*.swp
+*.swo
+
+############################
+# Vault / Local Secrets
+############################
+vault/
+*.pem
+*.key
+*.crt
+
+############################
+# Testing / Temp
+############################
+tmp/
+temp/
+.cache/
+
+############################
+# Misc
+############################
+*.zip
+*.tar
+*.gz
+*.bak
