--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "i18next": "^25.8.7",
+    "i18next-browser-languagedetector": "^8.2.1",
+    "i18next-http-backend": "^3.0.2",
     "js-sha256": "^0.11.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
