--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,13 @@ jobs:
 
       - name: Install
         working-directory: frontend
-        run: npm ci
+        run: |
+          node -v
+          npm -v
+          ls -la
+          cat package.json | sed -n "1,120p"
+          npm ci
+          node -e "console.log(\"i18next resolved to:\", require.resolve(\"i18next\"))"
 
       - name: Build
         working-directory: frontend
