Add GitHub Pages SPA fallback (404.html -> index.html)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           npm run build
           test -f dist/index.html
+          cp dist/index.html dist/404.html
           touch dist/.nojekyll
 
       - name: Configure Pages
